@@ -95,6 +95,94 @@
     </branches>
   </module>
 
+
+  <module id="gnome-applets">
+    <_description>Gnome Applets</_description><!-- defaults to ID -->
+    <webpage>http://gnome.org/projects/epiphany/</webpage>
+    <maintainers>
+	<maintainer><name>Davyd Madeley</name>
+		    <email>davyd@madeley.id.au</email>
+		    <irc-nickname>davyd</irc-nickname>
+		    <webpage>http://www.davyd.id.au/</webpage>
+		    <hackergotchi>http://planet.gnome.org/heads/davyd.png</hackergotchi>
+	 </maintainer>
+    </maintainers>
+    <branches><!-- defaults only to HEAD -->
+	<branch tag="HEAD" stringfrozen="1">
+            <translation-domains><!-- defaults to a single "po" -->
+        	<domain base="gnome-applets">
+        	    <directory>po</directory>
+        	    <_description>UI translations</_description>
+                </domain>
+        	<domain base="weather-locations">
+        	    <directory>po-locations</directory>
+        	    <_description>Weather Applet Locations</_description>
+                </domain>
+            </translation-domains>
+            <documents>
+                <document>
+        	  <directory>accessx-status/docs</directory>
+        	  <_description>AccessX Status Manual</_description>
+                </document>
+                <document>
+        	  <directory>battstat/docs</directory>
+        	  <_description>Battery Status Manual</_description>
+                </document>
+                <document>
+        	  <directory>charpick/help</directory>
+        	  <_description>Character Picker Manual</_description>
+                </document>
+                <document>
+        	  <directory>cpufreq/help</directory>
+        	  <_description>CPU Frequency Monitor Manual</_description>
+                </document>
+                <document>
+        	  <directory>drivemount/help</directory>
+        	  <_description>Drive Mounter Manual</_description>
+                </document>
+                <document>
+        	  <directory>geyes/docs</directory>
+        	  <_description>GEyes Manual</_description>
+                </document>
+                <document>
+        	  <directory>gswitchit/help</directory>
+        	  <_description>Keyboard Preferences Manual</_description>
+                </document>
+                <document>
+        	  <directory>gtik/help</directory>
+        	  <_description>Stock Ticker Manual</_description>
+                </document>
+                <document>
+        	  <directory>gweather/docs</directory>
+        	  <_description>Weather Applet Manual</_description>
+                </document>
+                <document>
+        	  <directory>mini-commander/help</directory>
+        	  <_description>Mini Commander Manual</_description>
+                </document>
+                <document>
+        	  <directory>mixer/docs</directory>
+        	  <_description>Sound Mixer Manual</_description>
+                </document>
+                <document>
+        	  <directory>multiload/docs</directory>
+        	  <_description>System Monitor Manual</_description>
+                </document>
+                <document>
+        	  <directory>stickynotes/docs</directory>
+        	  <_description>Sticky Notes Manual</_description>
+                </document>
+                <document>
+        	  <directory>trashapplet/docs</directory>
+        	  <_description>Trash Manual</_description>
+                </document>
+            </documents>
+        </branch>
+    </branches>
+  </module>
+
+
+
   <module id="glib">
     <description>GLib</description>
     <webpage>http://gtk.org/</webpage>
@@ -151,6 +239,17 @@
 	<maintainer><name>James Livingston</name>
 		    <email>jrl@ids.org.au</email>
 		    <irc-nickname>doctau</irc-nickname>
+		    </maintainer>
+    </maintainers>
+  </module>
+
+
+  <module id="sabayon">
+    <_description>Sabayon</_description><!-- defaults to ID -->
+    <maintainers>
+	<maintainer><name>Daniel Veillard </name>
+		    <email>veillard@redhat.com</email>
+		    <irc-nickname>DV</irc-nickname>
 		    </maintainer>
     </maintainers>
   </module>
