@@ -1,3 +1,11 @@
+2006-03-11  Danilo Šegan  <danilo@gnome.org>
+
+	* gnome-modules.xml.in: Added gnome-applets, sabayon, pesselus.
+
+	* releases.xml.in: Complete desktop, developer-libs sections.
+
+	* update-stats.py (LocStatistics.check_lang_support): 
+	Correct debug output.
 
 == Release 0.9 ==
 	
